@@ -5,7 +5,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:[5.1.26,)'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:[5.1.39,5.2.0)'
         classpath "gradle.plugin.net.nemerosa:versioning:2.14.0"
         classpath "dev.vankka:gradle-plugin:1.2.1"
     }
@@ -54,15 +54,15 @@ ext {
     COREMODS_VERSION = '5.0.1'
     EVENTBUS_VERSION = '5.0.3'
     MODLAUNCHER_VERSION = '9.1.3'
-    SECUREJARHANDLER_VERSION = '1.0.5'
+    SECUREJARHANDLER_VERSION = '1.0.8'
     BOOTSTRAPLAUNCHER_VERSION = '1.0.0'
-    ASM_VERSION = '9.4'
+    ASM_VERSION = '9.5'
     INSTALLER_VERSION = '2.1.+'
     MIXIN_VERSION = '0.8.5'
-    JARJAR_VERSION = '0.3.0'
+    JARJAR_VERSION = '0.3.19'
 
     GIT_INFO = gradleutils.gitInfo
-    FORGE_VERSION = '40.2.1'
+    FORGE_VERSION = '40.2.4'
     MAGMA_VERSION = "1.18.2-$FORGE_VERSION-" + versioning.info.commit.substring(0, 8) // Use 8 characters for the commit hash
      VERSION = "1.18.2-$FORGE_VERSION"
 
@@ -70,7 +70,7 @@ ext {
     BINPATCH_TOOL = 'net.minecraftforge:binarypatcher:1.0.12:fatjar'
     INSTALLER_TOOLS = 'net.minecraftforge:installertools:1.3.0'
     JAR_SPLITTER = 'net.minecraftforge:jarsplitter:1.1.4'
-    FART = 'net.minecraftforge:ForgeAutoRenamingTool:0.1.22:all'
+    FART = 'net.minecraftforge:ForgeAutoRenamingTool:0.1.25:all'
     MIN_TAG_FOR_CHANGELOG = "39.0"
 
     BIN_PATCHER = BINPATCH_TOOL.substring(0, BINPATCH_TOOL.length() - 1 - BINPATCH_TOOL.split(':')[3].length())
@@ -202,6 +202,7 @@ def sharedDeps = {
     moduleonly "org.ow2.asm:asm-util:${ASM_VERSION}"
     moduleonly "org.ow2.asm:asm-analysis:${ASM_VERSION}"
     moduleonly "cpw.mods:bootstraplauncher:${BOOTSTRAPLAUNCHER_VERSION}"
+    moduleonly "net.minecraftforge:JarJarFileSystems:${JARJAR_VERSION}"
 
     installer "cpw.mods:securejarhandler:${SECUREJARHANDLER_VERSION}"
     installer "org.ow2.asm:asm:${ASM_VERSION}"
@@ -225,7 +226,8 @@ def sharedDeps = {
     installer 'org.jline:jline-terminal:3.21.0' //Dep of TerminalConsoleAppender
     installer "org.spongepowered:mixin:${MIXIN_VERSION}"
     installer 'org.openjdk.nashorn:nashorn-core:15.3'
-    installer "net.minecraftforge:JarJar:${JARJAR_VERSION}"
+    installer "net.minecraftforge:JarJarSelector:${JARJAR_VERSION}"
+    installer "net.minecraftforge:JarJarMetadata:${JARJAR_VERSION}"
 
     /*
     installer 'org.lwjgl:lwjgl:3.2.2'
@@ -407,6 +409,7 @@ def sharedFmlonlyForge = { Project prj ->
         run.jvmArgs '--add-modules', 'ALL-MODULE-PATH'
         // Additions to these JVM module args should be mirrored to server_files/args.txt and other similar blocks in the buildscript
         run.jvmArgs '--add-opens', 'java.base/java.util.jar=cpw.mods.securejarhandler'
+        run.jvmArgs '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler'
         run.jvmArgs '--add-exports', 'java.base/sun.security.util=cpw.mods.securejarhandler'
         run.jvmArgs '--add-exports', 'jdk.naming.dns/com.sun.jndi.dns=java.naming'
     }
@@ -592,6 +595,7 @@ project(':fmlonly') {
                           '--add-modules', 'ALL-MODULE-PATH',
                           // Additions to these JVM module args should be mirrored to server_files/args.txt and other similar blocks in the buildscript
                           '--add-opens', 'java.base/java.util.jar=cpw.mods.securejarhandler',
+                          '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler',
                           '--add-exports', 'java.base/sun.security.util=cpw.mods.securejarhandler',
                           '--add-exports', 'jdk.naming.dns/com.sun.jndi.dns=java.naming'
                     ]
@@ -1171,6 +1175,7 @@ project(':forge') {
                           '--add-modules', 'ALL-MODULE-PATH',
                           // Additions to these JVM module args should be mirrored to server_files/args.txt and other similar blocks in the buildscript
                           '--add-opens', 'java.base/java.util.jar=cpw.mods.securejarhandler',
+                          '--add-opens', 'java.base/java.lang.invoke=cpw.mods.securejarhandler',
                           '--add-exports', 'java.base/sun.security.util=cpw.mods.securejarhandler',
                           '--add-exports', 'jdk.naming.dns/com.sun.jndi.dns=java.naming'
                     ]
